@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.1.60:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.1.61:
 
 Epson EC 4020 Series
 Epson EC 4030 Series
@@ -41,6 +41,7 @@ Epson ET 16150 Series
 Epson ET 16600 Series
 Epson ET 16650 Series
 Epson ET 16680 Series
+Epson ET 18100 Series
 Epson ET M1140 Series
 Epson ET M1170 Series
 Epson ET M1180 Series
