@@ -1,7 +1,4 @@
-DIST epson-inkjet-printer-escpr2-1.1.59-1lsb3.2.i486.rpm 3682591 BLAKE2B 9d65b0456b0d076130d0c3fd813545b44a7cf9640a0f667246496e58ff3e3ace276d72ce5238040996c3277770096ab49dab7df9bb3fcc3e8bf5d9661d01e467 SHA512 e8f0f09f0b2c7de4d10aedadcc0b259b8ce2f07a1c0941d0e498a6d6d906b19b69a94bfdc4c160be79e002efa63550a5fd88e76983d98794dc4d5b5dc67c16b1
-DIST epson-inkjet-printer-escpr2-1.1.59-1lsb3.2.x86_64.rpm 3681961 BLAKE2B 314e002deb977aba9ef278f1016ae6c77dc5b270e76f3e267d70e306029965d3bcecdc6423adb6eb1a17ee3e8a26923bc8e17c7f48ac86965e5c641482855380 SHA512 e35e475dadfd06fd9c930f56c52ccd470ea3231c517b0129bb07355806a5f151a8c31a46570c312f176ac4fd8eb072095cdc903ebec187f060f34d082deb5790
 DIST epson-inkjet-printer-escpr2-1.1.60-1lsb3.2.i486.rpm 3646971 BLAKE2B b4b4605492e4a8881704a87d6b0ac644d42e6d3acef6065f1c580fe34dff688895d87811d073078eb77c9613ee5d56d99de6098ba34a1eb834afc3f1f6566034 SHA512 33c1cd023d5e11af9049654a6950af06c7ed3826e225e81c76cd2eecbfbd4f7de72ad5d5d489346f1e792910c8cd1c8e2517095b7e6b01e7e012dc39efa02c5a
 DIST epson-inkjet-printer-escpr2-1.1.60-1lsb3.2.x86_64.rpm 3646300 BLAKE2B 123cf553264977b4f91534ce24f9bda9579328c8b624e9971947c9bf33601f89e3152fe0d002fc2f32260344bea1df722705e00fa4fb87dcda12e8b2be07a601 SHA512 e6db76d24501338d887be697788988d0cf86cbe79024dff4d148d417937d162ddf16608055a2eca0fea7d6ec04ebe2768ab53fe33dc3d1d9de3fc943bd95c4a1
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.59.ebuild 1670 BLAKE2B 2d50a5e5794d4909286a107e9afc796454d62f7ed3eab3ba1f2cc21687d686acc3887a30ba5b67541e387d037b8af4f49fb5d69f0437f6aa5afada0d8f199e99 SHA512 3d6af3de717ba3688e290fef84f5e27ec71aca7eef1f56d8548e0c10d2fd6f76199edb339325630eea2f1f308f2eee3b9192be97027e4e4773f095f9ed4fc579
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.60.ebuild 1670 BLAKE2B acd3850dc831179f0b9ce925635cc4049b19ee873db592aa66af40b89b8d52d30ed6d7f5042327927ef59e9b3c944902261de3bcffeffcdc8435c228de7e527d SHA512 6e91ae657ac04ef654379608354f0f41522a95886eb9a98f45206e9c9bcb45ccf4ada6a88cb3e39443c56e2d195d8f1a764f7493d2aaa747e13609cd259b10f4
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.60-r1.ebuild 1670 BLAKE2B 9cb3adc370f33eeda1ad4f650c28430fbe5b4d742dd6bf2bfe0389aa010c025729a7fb1d78a01f5f2d14fb592e5cfa1ce2ff0f413cd48f430573a06092ef8ef5 SHA512 eceaa3143ee359f73f5e9dba819f634dcb78df69fab729ee35fe27b988ce8fbd92f76e6b90c4c255e7010ba081cec4049929636ac124d31747869b44eec86783
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
