@@ -5,8 +5,8 @@ EAPI=6
 
 inherit rpm
 
-DSC_x86="f/03/00/14/17/07/cd492d9defcc0b6f4052848fd03003aab4c0819a"
-DSC_amd64="f/03/00/14/17/07/710ebd5f4f98a7c4d1d934c64c78e70f3c4fd06e"
+DSC_x86="f/03/00/14/31/94/6e58cc9ee713f8000b5381060db4bba535934032"
+DSC_amd64="f/03/00/14/31/94/14c2e8ee6f2586b2b1cc1e8024b532cf021b72a1"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver binary package"
 HOMEPAGE="https://download.ebz.epson.net/dsc/search/01/search/?OSC=LX"
