@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.59.tar.gz 5033782 BLAKE2B bed27940ed23c223b8634a6e93a728213a8dd8310fb0a84d9704ee087354de35820ffea40cf95103fed07a5c8cf90a68355afd723aa04fe845fab1a9a06f5074 SHA512 97b7ce729d0ce83fcd1854f148d5ada64555b5a0305e270dafa81e70b7046daf5a674070e7d2656ecead3b3856576a6ce339d9c0aa8b1dc3936eb2abb9c17fc9
 DIST epson-inkjet-printer-escpr2-1.1.60.tar.gz 5052178 BLAKE2B 0537fe08233f8d8c4a3e23f02220f9da910732bc85aeefb0d2a56518ce2da01f8320a4ac27b6fa028b27a1359bc1326f0c59de6ec8a210bc1fd79f7d28363ad4 SHA512 66893a5950328237d48875a0c076561803368de6615d80deeffd6839b158dee3871d5025ed792b2213bbcb3652c32f806ebb73176c6347dd40f888009de97d83
-EBUILD epson-inkjet-printer-escpr2-1.1.59.ebuild 1319 BLAKE2B 18dc8f8dbc56ecf10ddc9bd7e330fb6817cc113373348a85baef303b40ab49c85e0ab37de4e18a56e85cdbd6dc5c613facd70de9b78e4a1658b4a784c50b17ca SHA512 ff514a3e72f85475b7dde95bc8ceb75e6d7cd4e5358daea4c1e49c2204960e9937d249db083f7dce90fd654843b270afa8368721dfbb54d64544a6570aa6e5ea
+DIST epson-inkjet-printer-escpr2-1.1.61.tar.gz 5070231 BLAKE2B 4bd2807d3f12f89d73af16ada9f9e117cbf9be021598077a4e41b59791b3c69100b20a77ca5858d0cb24107b54e602a7a66622b5052d7385335cb1cc86a4f6f4 SHA512 e438cbdd19ab9e07e29e6cf86126a727e6888acb9b2f067b8daabcf4639c47b52491be137773535215d277161166610a9673abf08476f6a4205d782497311613
 EBUILD epson-inkjet-printer-escpr2-1.1.60.ebuild 1319 BLAKE2B 9e63d30fc8005a8aa611471bf8186d43e0c0dad34883d5afd96017a25149b1642fdfa6b2057e83ed017994e4ef05541dc0fa8fc7dc438156922bc767dcd89981 SHA512 797339b852c5547388cc8b55d1d41ee9666b7cfbdd4a340355d898e76bf227568264589456ef701398e7bee333ee5063e943e0d5719913db580c10db4c11f0d7
+EBUILD epson-inkjet-printer-escpr2-1.1.61.ebuild 1319 BLAKE2B a5b86bfb9c854f8b38b002e5a8e510e63c31fdbf6c7433962222bcf5140c8231097f10d42615b1a4ae848fc269128b41227d97b15f7dcf90270afd7baf659f2f SHA512 14385a3711a722ac1b946680c58a0ab8acdddb5671d8c8b2ba7132e680e9c79351e862956733433235bcfbda6a90c5c58dcf7d6088c5a4e7a65b617c7908f129
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
